[gd_scene load_steps=7 format=3 uid="uid://cl54r7scqb8x2"]

[ext_resource type="Script" path="res://Game/Scenes/Player/Player.gd" id="1_dydsy"]
[ext_resource type="PackedScene" uid="uid://dxschfv10xhuy" path="res://Game/Components/Visual_Component/visual_component.tscn" id="1_ynkep"]
[ext_resource type="PackedScene" uid="uid://bf6wvf00nqved" path="res://Game/Components/Interaction_Component/interaction_component.tscn" id="2_mr06p"]
[ext_resource type="PackedScene" uid="uid://cu1qxrv7bksx3" path="res://scenes/Camera/camera.tscn" id="4_scqfh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x70ov"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tbaro"]
radius = 6.0
height = 18.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_dydsy")

[node name="Room_Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room_Detector"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_x70ov")

[node name="Weapon_Holder" type="Marker2D" parent="."]
position = Vector2(13, 0)

[node name="Melee" type="Area2D" parent="Weapon_Holder"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_tbaro")

[node name="Interaction_Component" parent="." instance=ExtResource("2_mr06p")]

[node name="Visual_Component" parent="." instance=ExtResource("1_ynkep")]
position = Vector2(1, 0)

[node name="Camera" parent="." instance=ExtResource("4_scqfh")]

[connection signal="area_entered" from="Room_Detector" to="." method="_on_room_detector_area_entered"]
[connection signal="area_entered" from="Weapon_Holder/Melee" to="." method="_on_melee_area_entered"]
